tests/compile-fail/static_mut_requires_unsafe.lm
static mut X: U32;

fn main() {
  let _ = X;
}
